update: .spec.yml

--- a/.spec.md
+++ b/.spec.md
@@ -1,8 +1,8 @@
-#[ΔOS]
+#[ ΔOS ]
 
-##[folders]
+##[ dirs ]
 
-##[private]
+###[ private ]
 
 * .deos/
 
@@ -18,19 +18,19 @@
 
 * .vagrant/
 
-##[public]
+###[ public ]
 
-* app/
+#### app/
 
-  * freebird/
+* freebird/
 
-    * node_modules/
+* node_modules/
 
-    * package.json
+* package.json
 
-    * yarn.lock
+* yarn.lock
 
-* bin/
+#### bin/
 
 * boot/
 
@@ -50,9 +50,9 @@
 
 * var/
 
-##[files]
+##[ files ]
 
-###[dotfiles]
+###[ dotfiles ]
 
 * .deosconfig
 
@@ -72,7 +72,7 @@
 
 * .travis.yml
 
-###[build]
+###[ build ]
 
 * Gulpfile.babel.js
 
@@ -80,7 +80,7 @@
 
 * Vagrantfile
 
-###[config]
+###[ config ]
 
 * package.json
 
@@ -88,7 +88,7 @@
 
 * yarn.lock
 
-###[info]
+###[ info ]
 
 * LICENSE.md
 
