update: .spec.yml

--- a/.spec.md
+++ b/.spec.md
@@ -1,10 +1,10 @@
-#[ ΔOS ]
+# ΔOS Specification
 
-##[ dirs ]
+## Directories
 
-###[ private ]
+### _Private_
 
-* .deos/
+#### `.deos/`
 
   * node_modules/
 
@@ -18,9 +18,9 @@
 
 * .vagrant/
 
-###[ public ]
+### _Public_
 
-#### app/
+#### `app/`
 
 * freebird/
 
@@ -30,7 +30,7 @@
 
 * yarn.lock
 
-#### bin/
+#### `bin/`
 
 * boot/
 
