update: spec.md

--- a/.spec.md
+++ b/.spec.md
@@ -6,90 +6,90 @@
 
 #### `.deos/`
 
-  * node_modules/
+  * `node_modules/`
 
-  * Makefile
+  * `Makefile`
 
-  * package.json
+  * `package.json`
 
-  * yarn.lock
+  * `yarn.lock`
 
-* .git/
+#### `.git/`
 
-* .vagrant/
+#### `.vagrant/`
 
 ### _Public_
 
 #### `app/`
 
-* freebird/
+* `freebird/`
 
-* node_modules/
+* `node_modules/`
 
-* package.json
+* `package.json`
 
-* yarn.lock
+* `yarn.lock`
 
 #### `bin/`
 
-* boot/
+#### `boot/`
 
-* doc/
+#### `doc/`
 
-* etc/
+#### `etc/`
 
-* include/
+#### `include/`
 
-* node_modules/
+#### `node_modules/`
 
-* root/
+#### `root/`
 
-* src/
+#### `src/`
 
-* test/
+#### `test/`
 
-* var/
+#### `var/`
 
-##[ files ]
+## Files
 
-###[ dotfiles ]
+### _dotfiles_
 
-* .deosconfig
+* `.deosconfig`
 
-* .deosrc
+* `.deosrc`
 
-* .editorconfig
+* `.editorconfig`
 
-* .flowconfig
+* `.flowconfig`
 
-* .gitattributes
+* `.gitattributes`
 
-* .gitignore
+* `.gitignore`
 
-* .nvmrc
+* `.nvmrc`
 
-* .spec.yml
+* `.spec.yml`
 
-* .travis.yml
+* .`travis.yml`
 
-###[ build ]
+### _build_
 
-* Gulpfile.babel.js
+* `Gulpfile.babel.js`
 
-* Makefile
+* `Makefile`
 
-* Vagrantfile
+* `Vagrantfile`
 
-###[ config ]
+### _config_
 
-* package.json
+* `package.json`
 
-* setup.py
+* `setup.py`
 
-* yarn.lock
+* `yarn.lock`
 
-###[ info ]
+### _info _
 
-* LICENSE.md
+* `LICENSE.md`
 
-* README.md
+* `README.md`
