--- a/.spec.md
+++ b/.spec.md
@@ -1,34 +1,34 @@
 # ΔOS Specification
 
-## Directories
+## **Directories**
 
-### _Private_
+### *Private*
 
 #### `.deos/`
 
-  * `node_modules/`
+- **`node_modules/`**
 
-  * `Makefile`
+- `Makefile`
 
-  * `package.json`
+- `package.json`
 
-  * `yarn.lock`
+- `yarn.lock`
 
 #### `.git/`
 
 #### `.vagrant/`
 
-### _Public_
+### *Public*
 
 #### `app/`
 
-* `freebird/`
+- **`freebird/`**
 
-* `node_modules/`
+#### `node_modules/`
 
-* `package.json`
+- `package.json`
 
-* `yarn.lock`
+- `yarn.lock`
 
 #### `bin/`
 
@@ -50,46 +50,46 @@
 
 #### `var/`
 
-## Files
+## **Files**
 
-### _dotfiles_
+### *dotfiles*
 
-* `.deosconfig`
+- *`.deosconfig`*
 
-* `.deosrc`
+- *`.deosrc`*
 
-* `.editorconfig`
+- *`.editorconfig`*
 
-* `.flowconfig`
+- *`.flowconfig`*
 
-* `.gitattributes`
+- *`.gitattributes`*
 
-* `.gitignore`
+- *`.gitignore`*
 
-* `.nvmrc`
+- *`.nvmrc`*
 
-* `.spec.yml`
+- *`.spec.yml`*
 
-* .`travis.yml`
+- *`.travis.yml`*
 
-### _build_
+### *build*
 
-* `Gulpfile.babel.js`
+- `Gulpfile.babel.js`
 
-* `Makefile`
+- `Makefile`
 
-* `Vagrantfile`
+- `Vagrantfile`
 
-### _config_
+### *config*
 
-* `package.json`
+- `package.json`
 
-* `setup.py`
+- `setup.py`
 
-* `yarn.lock`
+- `yarn.lock`
 
-### _info _
+### *info*
 
-* `LICENSE.md`
+- `LICENSE.md`
 
-* `README.md`
+- `README.md`
