--- a/.spec.md
+++ b/.spec.md
@@ -8,11 +8,11 @@
 
 - **`node_modules/`**
 
-- `Makefile`
+- *`Makefile`*
 
-- `package.json`
+- *`package.json`*
 
-- `yarn.lock`
+- *`yarn.lock`*
 
 #### `.git/`
 
@@ -26,9 +26,9 @@
 
 #### `node_modules/`
 
-- `package.json`
+- *`package.json`*
 
-- `yarn.lock`
+- *`yarn.lock`*
 
 #### `bin/`
 
@@ -74,22 +74,22 @@
 
 ### *build*
 
-- `Gulpfile.babel.js`
+- *`Gulpfile.babel.js`*
 
-- `Makefile`
+- *`Makefile`*
 
-- `Vagrantfile`
+- *`Vagrantfile`*
 
 ### *config*
 
-- `package.json`
+- *`package.json`*
 
-- `setup.py`
+- *`setup.py`*
 
-- `yarn.lock`
+- *`yarn.lock`*
 
 ### *info*
 
-- `LICENSE.md`
+- *`LICENSE.md`*
 
-- `README.md`
+- *`README.md`*
