--- a/.spec.md
+++ b/.spec.md
@@ -46,11 +46,21 @@
 
 - **`com/`**
 
+    - *`.meta.yml`*
+
 - **`id/`**
 
-    - *`atd/`*
+    - **`atd/`**
 
-    - *`deos`*
+        - *`.meta.yml`*
+
+    - **`deos/`**
+
+        - *`.meta.yml`*
+
+    - *`.meta.yml`*
+
+- *`.meta.yml`*
 
 #### `src/`
 
