--- a/meta/.editorconfig.md
+++ b/meta/.editorconfig.md
@@ -1,3 +1,29 @@
+# `.editorconfig`
+
+## Schema
+
+```yaml
+type: object
+required: [a, b, c]
+properties:
+  a: {type: number}
+  b: {type: number}
+  c: {type: number}
+```
+
+## Environment
+
+```yaml
+a: 1
+b: 2
+c: 3
+```
+
+## Template
+
+```ini
+Δ with (data=None)
+
 root=true
 
 [*]
@@ -32,4 +58,4 @@ indent_style=tab
 [Vagrantfile]
 indent_style=space
 indent_size=2
-
+```
