--- a/meta/.gitignore.md
+++ b/meta/.gitignore.md
@@ -1,4 +1,29 @@
-[wildcards]
+# `.gitignore`
+
+## Schema
+
+```yaml
+type: object
+required: [a, b, c]
+properties:
+  a: {type: number}
+  b: {type: number}
+  c: {type: number}
+```
+
+## Environment
+
+```yaml
+a: 1
+b: 2
+c: 3
+```
+
+## Template
+
+```sh
+Δ with (data=None)
+#[wildcards]
 *.o
 *.pyc
 
@@ -27,4 +52,4 @@ yarn-error.log
 !etc/zerotier/.gitprivate
 !var/backup/.gitprivate
 !var/log/deos/.gitprivate
-
+```
