update-meta: .editorconfig

--- a/meta/Δ:.editorconfig.md
+++ b/meta/Δ:.editorconfig.md
@@ -37,6 +37,10 @@ trim_trailing_whitespace=true
 [*.mk]
 indent_style=tab
 
+[*.md]
+indent_style=space
+indent_size=2
+
 [*.{lz,sh}]
 indent_style=space
 indent_size=2
