update: meta,boot

--- a/meta/Δ:.gitignore.md
+++ b/meta/Δ:.gitignore.md
@@ -23,6 +23,7 @@ c: 3
 
 ```sh
 Δ with (data=None)
+
 #[wildcards]
 *.o
 *.pyc
@@ -55,4 +56,30 @@ yarn-error.log
 !etc/zerotier/.gitprivate
 !var/backup/.gitprivate
 !var/log/deos/.gitprivate
+```
+
+## Test[Environment]
+
+```yaml
+a: 1
+b: 2
+c: 3
+```
+
+## Test[Pass]
+
+```sh
+#!/bin/sh
+echo "1"
+echo "2"
+echo "3"
+```
+
+## Test[Fail]
+
+```sh
+#!/bin/sh
+echo "3"
+echo "2"
+echo "1"
 ```
