--- a/meta/Δ:.editorconfig.md
+++ b/meta/Δ:.editorconfig.md
@@ -63,3 +63,29 @@ indent_style=tab
 indent_style=space
 indent_size=2
 ```
+
+## Test[Environment]
+
+```yaml
+a: 1
+b: 2
+c: 3
+```
+
+## Test[Pass]
+
+```sh
+#!/bin/sh
+echo "1"
+echo "2"
+echo "3"
+```
+
+## Test[Fail]
+
+```sh
+#!/bin/sh
+echo "3"
+echo "2"
+echo "1"
+```
