update: meta/*.md

--- a/meta/Δ:.editorconfig.md
+++ b/meta/Δ:.editorconfig.md
@@ -64,7 +64,7 @@ indent_style=space
 indent_size=2
 ```
 
-## Test[Environment]
+## Test: Environment
 
 ```yaml
 a: 1
@@ -72,7 +72,7 @@ b: 2
 c: 3
 ```
 
-## Test[Pass]
+## Test: Pass
 
 ```sh
 #!/bin/sh
@@ -81,7 +81,7 @@ echo "2"
 echo "3"
 ```
 
-## Test[Fail]
+## Test: Fail
 
 ```sh
 #!/bin/sh
@@ -89,3 +89,4 @@ echo "3"
 echo "2"
 echo "1"
 ```
+
