--- a/meta/Δ:.gitignore.md
+++ b/meta/Δ:.gitignore.md
@@ -58,7 +58,7 @@ yarn-error.log
 !var/log/deos/.gitprivate
 ```
 
-## Test[Environment]
+## Test: Environment
 
 ```yaml
 a: 1
@@ -66,7 +66,7 @@ b: 2
 c: 3
 ```
 
-## Test[Pass]
+## Test: Pass
 
 ```sh
 #!/bin/sh
@@ -75,7 +75,7 @@ echo "2"
 echo "3"
 ```
 
-## Test[Fail]
+## Test: Fail
 
 ```sh
 #!/bin/sh
@@ -83,3 +83,4 @@ echo "3"
 echo "2"
 echo "1"
 ```
+
