--- a/meta/Δ:.nvmrc.md
+++ b/meta/Δ:.nvmrc.md
@@ -27,7 +27,7 @@ c: 3
 v7.0.0
 ```
 
-## Test[Environment]
+## Test: Environment
 
 ```yaml
 a: 1
@@ -35,7 +35,7 @@ b: 2
 c: 3
 ```
 
-## Test[Pass]
+## Test: Pass
 
 ```sh
 #!/bin/sh
@@ -44,7 +44,7 @@ echo "2"
 echo "3"
 ```
 
-## Test[Fail]
+## Test: Fail
 
 ```sh
 #!/bin/sh
@@ -52,3 +52,4 @@ echo "3"
 echo "2"
 echo "1"
 ```
+
