--- a/var/wiki/Δ:.deosrc.md
+++ b/var/wiki/Δ:.deosrc.md
@@ -43,6 +43,8 @@ PRINTM:=$(BASEDIR)/.deos/bin/darwin/print
 else
 PRINTM:=$(BASEDIR)/.deos/bin/travis/print
 endif
+
+export DeOS_VM_BOX:=bento/ubuntu-16.04
 ```
 
 ## Test: Environment
