--- a/meta/Δ:.travis.md
+++ b/meta/Δ:.travis.md
@@ -48,28 +48,10 @@ after_script:
 - echo 'after_script'
 ```
 
-## Test: Environment
+## Test
 
 ```yaml
 a: 1
 b: 2
 c: 3
-```
-
-## Test: Pass
-
-```sh
-#!/bin/sh
-echo "1"
-echo "2"
-echo "3"
-```
-
-## Test: Fail
-
-```sh
-#!/bin/sh
-echo "3"
-echo "2"
-echo "1"
 ```
