--- a/meta/Δ:.editorconfig.md
+++ b/meta/Δ:.editorconfig.md
@@ -64,29 +64,10 @@ indent_style=space
 indent_size=2
 ```
 
-## Test: Environment
+## Test
 
 ```yaml
 a: 1
 b: 2
 c: 3
 ```
-
-## Test: Pass
-
-```sh
-#!/bin/sh
-echo "1"
-echo "2"
-echo "3"
-```
-
-## Test: Fail
-
-```sh
-#!/bin/sh
-echo "3"
-echo "2"
-echo "1"
-```
-
