--- a/var/wiki/Δ:.deosrc.md
+++ b/var/wiki/Δ:.deosrc.md
@@ -47,28 +47,10 @@ endif
 export DeOS_VM_BOX:=bento/ubuntu-16.04
 ```
 
-## Test: Environment
+## Test
 
 ```yaml
 a: 1
 b: 2
 c: 3
-```
-
-## Test: Pass
-
-```sh
-#!/bin/sh
-echo "1"
-echo "2"
-echo "3"
-```
-
-## Test: Fail
-
-```sh
-#!/bin/sh
-echo "3"
-echo "2"
-echo "1"
 ```
