--- a/var/wiki/Δ:.nvmrc.md
+++ b/var/wiki/Δ:.nvmrc.md
@@ -27,29 +27,10 @@ c: 3
 v7.0.0
 ```
 
-## Test: Environment
+## Test
 
 ```yaml
 a: 1
 b: 2
 c: 3
 ```
-
-## Test: Pass
-
-```sh
-#!/bin/sh
-echo "1"
-echo "2"
-echo "3"
-```
-
-## Test: Fail
-
-```sh
-#!/bin/sh
-echo "3"
-echo "2"
-echo "1"
-```
-
