--- a/var/wiki/Δ:.deosrc.md
+++ b/var/wiki/Δ:.deosrc.md
@@ -38,9 +38,12 @@ HOSTOS:=$(shell uname -s)
 SETCACHE:=$(TRUE)
 USECACHE:=$(FALSE)
 
+
 ifeq ($(HOSTOS),$(IS_MAC))
+LOGGER:=$(BASEDIR)/.deos/bin/darwin/logger
 PRINTM:=$(BASEDIR)/.deos/bin/darwin/print
 else
+LOGGER:=$(BASEDIR)/.deos/bin/travis/logger
 PRINTM:=$(BASEDIR)/.deos/bin/travis/print
 endif
 
