--- a/var/wiki/Δ:.deosrc.md
+++ b/var/wiki/Δ:.deosrc.md
@@ -42,9 +42,11 @@ USECACHE:=$(FALSE)
 ifeq ($(HOSTOS),$(IS_MAC))
 LOGGER:=$(BASEDIR)/.deos/bin/darwin/logger
 PRINTM:=$(BASEDIR)/.deos/bin/darwin/print
+SPINNER:=$(BASEDIR)/.deos/bin/darwin/spinner
 else
 LOGGER:=$(BASEDIR)/.deos/bin/travis/logger
 PRINTM:=$(BASEDIR)/.deos/bin/travis/print
+SPINNER:=$(BASEDIR)/.deos/bin/travis/spinner
 endif
 
 export DeOS_VM_BOX:=bento/ubuntu-16.04
