--- a/var/wiki/Δ:.deosrc.md
+++ b/var/wiki/Δ:.deosrc.md
@@ -38,6 +38,7 @@ HOSTOS:=$(shell uname -s)
 SETCACHE:=$(TRUE)
 USECACHE:=$(FALSE)
 
+UPCMD:="vagrant up --provider virtualbox"
 
 ifeq ($(HOSTOS),$(IS_MAC))
 LOGGER:=$(BASEDIR)/.deos/bin/darwin/logger
@@ -52,6 +53,11 @@ endif
 export DeOS_VM_BOX:=bento/ubuntu-16.04
 export DeOS_VM_SHELL_DEFAULT:=bash -c 'BASH_ENV=/etc/profile exec bash'
 export DeOS_VM_SHELL_SSH:=bash -l
+
+DeOS_ADD_DOTDEOS:=mkdir .deos .deos/bin .deos/bin/darwin .deos/bin/vagrant .deos/bin/travis .deos/obj .deos/obj/darwin .deos/obj/vagrant .deos/obj/travis .deos/venv .deos/venv/darwin .deos/venv/vagrant .deos/venv/travis
+DeOS_ADD_TRAVIS:=gem install travis --no-rdoc --no-ri
+DeOS_BIN_TRAVIS:=$(shell which travis)
+DeOS_RM_DOTDEOS:=rm -rf .deos
 ```
 
 ## Test
