--- a/meta/Δ:.gitignore.md
+++ b/meta/Δ:.gitignore.md
@@ -38,6 +38,7 @@ etc/zerotier/*
 node_modules/
 var/backup/*
 var/log/deos/*
+var/privkey/*
 
 #[dotfiles]
 .DS_Store
@@ -53,6 +54,7 @@ yarn-error.log
 !etc/zerotier/.gitprivate
 !var/backup/.gitprivate
 !var/log/deos/.gitprivate
+!var/privkey/.gitprivate
 ```
 
 ## Test
