init-app: vault,wallet

--- a/meta/Δ:.gitignore.md
+++ b/meta/Δ:.gitignore.md
@@ -31,6 +31,7 @@ c: 3
 #[dotfolders]
 .cache/
 .deos/
+.venv/
 
 #[folders]
 etc/blockstack/*
@@ -56,6 +57,7 @@ yarn-error.log
 !var/backup/.gitprivate
 !var/log/deos/.gitprivate
 !var/privkey/.gitprivate
+
 ```
 
 ## Test
