--- a/meta/Δ:.editorconfig.md
+++ b/meta/Δ:.editorconfig.md
@@ -45,7 +45,7 @@ indent_size=2
 indent_style=space
 indent_size=2
 
-[*.{css,html,hcl,json,js,jsx,pug,yml}]
+[*.{css,html,hcl,xml,ui,json,js,jsx,pug,yml}]
 indent_style=space
 indent_size=2
 
